Fix hidden dropdown in checkboxes options on mobile

--- a/css/partials/options.css
+++ b/css/partials/options.css
@@ -263,7 +263,11 @@
     }
 
     > div {
-      @apply absolute top-full left-0 grid bg-mono-900 overflow-hidden min-w-full rounded-t-none rounded-b;
+      @apply fixed left-0 grid bg-mono-900 overflow-hidden min-w-full rounded-b-none rounded-t;
+      @apply bottom-full;
+      @screen md {
+        @apply absolute top-full bottom-auto rounded-t-none rounded-b;
+      }
       label {
         @apply py-10;
         @media not all and (hover: none) {
